dependencies: upgrade Jedis to v4.4.0